managed/apps/ai/components/website/overlays/dev/patches/deploy-website-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-api
  namespace: ai
spec:
  template:
    spec:
      containers:
        - name: api
          image: gcr.io/tf-ops-cicd-97aadd/ai/website/dev/api:64756c5
