managed/apps/ai/components/website/overlays/dev/patches/deploy-website-static.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: website-static
  namespace: ai
spec:
  template:
    spec:
      containers:
        - name: static
          image: gcr.io/tf-ops-cicd-97aadd/ai/website/dev/static:d0e2c0c
